--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body id="body">
 	<div class="container">
-		<h1>Background Color: <span class="color" id="color">#fffff</span>
+		<h1>Background Color: <span class="color" id="color">#ffffff</span>
 		</h1>
 		<button id="btn">Change Background</button>
 	</div>
